# Masharif

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
masharifcore/: CMakeLists.txt  Masharif.h  macros.h
masharifcore/layout/: FlexLayoutStrategy.cpp  FlexLayoutStrategy.h  Layout.h  LayoutContext.h  LayoutStrategy.cpp  LayoutStrategy.h  Node.cpp  Node.h  NormalFlowStrategy.cpp  NormalFlowStrategy.h  OMPool.cpp  OMPool.h  OMQueue.h  om.cpp  om.h
masharifcore/structure/: Align.h  Border.h  BoxInfo.h  CSSValue.h  Color.h  Dimension.h  Edge.h  Flex.h  FlexDirection.h  Justify.h  Style.cpp  Style.h
tests/: AbsolutePositionTests.cpp  AlignmentTests.cpp  BenchmarkTests.cpp  CMakeLists.txt  ComputedMarginTests.cpp  DimensionTests.cpp  FlexTests.cpp  GapTests.cpp  LayoutTest.cpp  OutOfFlowRepositionTests.cpp  SpacingTests.cpp
